# learn_in_library

./: .gitignore  FUTURE.md  README.md  SPEC.md  pyproject.toml
corpora/high_speed_digital_design/: cleaner.py  corpus.yaml  eval.yaml
examples/: corpus.example.yaml
scripts/: smoke_test.py
src/rag_workspace/: __init__.py  answer.py  chunking.py  cleaning.py  cli.py  config.py  evaluation.py  ollama_client.py  pdf_extract.py  pipeline.py  quiz.py  retrieval.py  storage.py  vector_store.py
tests/: test_chunking.py  test_config.py  test_evaluation.py  test_ollama_client.py  test_pipeline.py  test_quiz.py  test_vector_store.py
