[project]
name = "rag-workspace"
version = "0.1.0"
description = "Local RAG workspace for PDF corpora and Ollama-backed answers."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rag-workspace = "rag_workspace.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
